--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ ul li a:hover{
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
     position: absolute;
     top: 90px;
-    left: 870px;
+    left: 1200px;
     border-radius: 10px;
     padding: 25px;
 }
@@ -234,112 +234,127 @@ ul li a:hover{
 .icon ion-icon:hover{
     color: #ff7200;
 }
-@media screen and (max-width:1200px) {
-    .navbar{
-        width: 100px;
-        height: 100px;
+@media screen and (max-width:768px) {
+    .main{
+        width: 100%;
+        background-image: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),  url(image/image.jpeg);
+        background-position: center;
+        background-size: cover;
+        height: 150vh;
+        overflow: hidden;
     }
     
-    ul{margin-left: 30px;
+    .nav.bar{
+        width: 120px;
+        height: 75px;
+  
+    }
 
-    }
-    ul li{
-        margin-left: 60px;
-    }
-    ul li a{
-        font-size: 1.6vw;
-    }
-    .search{
-        margin-top: 3px;
-        margin-left: 290px;
-    }
-    .srch{
-        height: 40px;
-        width: 190px;
-        font-size: 14px;
-    }
-    .btn{
-        height: 40px;
-        width: 80px;
-    }
     .content{
-        width: 100px;
-    }
-    .content h1, .content span{
-        font-size: 4.5vw;
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.5vw;
-    }
-    .content .cn{
-        width: 13%;
-        height: 1.8vw;
-        font-size: 1.8vw;
-    }
-    .content a{
-        font-size: 1.6vw;
-    }
-
-}
-@media screen and (max-width:117px) {
-    .main{
-        padding-left: 20px;
-        height: 180vh;
+        width: 1200px;
+            /* /* margin-left: -800px; */
+        height: auto;
+        color: #fff;
+        /* position: relative; */
     }
     .form{
         width: 250px;
         height: 380px;
         background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
         position: absolute;
-        top: 420px;
-        left: 50px;
+        top: 90px;
+        left: 80px;
         border-radius: 10px;
         padding: 25px;
+        margin-top: 500px;
     }
-    .form input{
-        margin-left: -30px;
-        width: 240px;
-        height: 35px;
-        background: transparent;
-        border-bottom: 1px solid #ff7200;
-        border-top: none;
-        color: #fff;
-        font-size: 15px;
-        letter-spacing: 1px;
-        margin-top: 30px;
-        font-family: sans-serif;
-    }
-
+    ul{
+        display: flex;
+        float: left;
+        justify-content: center;
+        align-items: center;
+        padding-top: 20px;
     
-}
-@media screen and (max-width:830px) {
-    .content h1, .content span{
-        font-size: 6vm;
-
     }
-    .content .par{
-        width: 90px;
-        font-size: 1.8vw;
+    ul li{
+        list-style: none;
+        margin-left: 2px;
+        margin-right: 2px;
+        font-size: 14px;
     }
-    .content.cn{
-        width: 15%;
-        height: 4.5vw;
-        font-size: 2vm;
+    .icon{
+        /* width: 250px; */
+        height: 75px;
+        /* margin: auto; */
     }
+    
     .logo{
-        margin-left: 240px;
-        width: 100%;
-        margin-top: 15px;
-        font-size: 5vw;
-
+        color: #ff7200;
+        font-size: 35px;
+        font-family: arial;
+        padding-left: 20px;
+        float: left;
+        padding-top: 10px;
     }
-.menu{
-    width: 100px;
-}
-ul{
-    margin-top: -5px;
-    margin-left: 5px;
-}
 }
 
+
+@media screen and (max-width:1024px) {
+    ul{
+        display: flex;
+        float: left;
+        justify-content: center;
+        align-items: center;
+        padding-top: 20px;
+    
+    }
+    ul li{
+        list-style: none;
+        margin-left: 2px;
+        margin-right: 40px;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width:1180px) {
+    .main{
+        width: 100%;
+        background-image: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),  url(image/image.jpeg);
+        background-position: center;
+        background-size: cover;
+        height: 150vh;
+        overflow: hidden;
+    }
+    .content{
+        width: 1200px;
+            /* /* margin-left: -800px; */
+        height: auto;
+        color: #fff;
+        /* position: relative; */
+    }
+    .form{
+        width: 250px;
+        height: 380px;
+        background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
+        position: absolute;
+        top: 90px;
+        left: 80px;
+        border-radius: 10px;
+        padding: 25px;
+        margin-top: 500px;
+    }
+    ul{
+        display: flex;
+        float: left;
+        justify-content: center;
+        align-items: center;
+        padding-top: 20px;
+    
+    }
+    ul li{
+        list-style: none;
+        margin-left: 2px;
+        margin-right: 40px;
+        font-size: 14px;
+    }
+}
