--- a/style.css
+++ b/style.css
@@ -15,48 +15,61 @@
     /* float: left; */
 }
 .icon{
-    width: 250px;
-    height: 75px;
-    margin: auto;
+    width: 100%;
+    background: #ff7200;
+    height: 40px;
 }
+.baricon{
+    background: white;
+    display: none;
+    font-size: 30px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+    
+
 
 .logo{
-    color: #ff7200;
+    color: #fff;
     font-size: 35px;
-    font-family: arial;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
+    padding: 0 100px;
+    font-weight: bold;
+
 }
-.menu{
+/* .menu{
     width: 400px;
     float: left;
     height: 70px;
-}
+}  */
 ul{
-    display: flex;
     float: left;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
+    margin-right: 200px;
+    
 
 }
 ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-right: 27px;
-    font-size: 14px;
+    display: inline-flex;
+    line-height: 80px;
+    margin: 0 5px;
+    
 }
 ul li a{
-    text-decoration: none;
+    float: left;
     color: #fff;
-    font-family: arial;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
+    font-size:17px;
+    padding: 15px 30px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    margin-right: 50px;
+}
+a.active,a:hover{
+    background: #000;
+    transition: .5s;
 }
 ul li a:hover{
     color: #ff7200;
-}
+} */ 
 .search{
     width: 330px;
     float: left;
@@ -150,10 +163,10 @@ ul li a:hover{
     height: 380px;
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
     position: absolute;
-    top: 90px;
-    left: 1200px;
+    top: 130px;
+    left: 1228px;
     border-radius: 10px;
-    padding: 25px;
+    padding: 15px;
 }
 .form h2{
     width: 220px;
@@ -211,8 +224,9 @@ ul li a:hover{
 .form .link{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
-    padding-top: 20px;
+    padding-top: 10px;
     text-align: center;
+    color: #fff;
 }
 .form .link a{
     text-decoration: none;
@@ -234,13 +248,17 @@ ul li a:hover{
 .icon ion-icon:hover{
     color: #ff7200;
 }
+#hamburger-menu{
+    display: none;
+}
+
 @media screen and (max-width:768px) {
     .main{
         width: 100%;
         background-image: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),  url(image/image.jpeg);
         background-position: center;
         background-size: cover;
-        height: 150vh;
+        height: 100vh;
         overflow: hidden;
     }
     
@@ -257,16 +275,23 @@ ul li a:hover{
         color: #fff;
         /* position: relative; */
     }
+    .content h1{
+        margin-top: 0%;
+    }
+    
     .form{
-        width: 250px;
-        height: 380px;
+        /* width: 250px;
+        height: 380px; */
         background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
-        position: absolute;
-        top: 90px;
-        left: 80px;
+        position: relative;
+left: 20px;
+align-items: center;
+justify-content: center;
         border-radius: 10px;
         padding: 25px;
-        margin-top: 500px;
+        display: flex;
+        flex-direction: column;
+        border: 10px solid #ff7200;
     }
     ul{
         display: flex;
@@ -275,6 +300,12 @@ ul li a:hover{
         align-items: center;
         padding-top: 20px;
     
+    }
+    #check{
+        display: none;
+    }
+    .srch{
+        width:286px;
     }
     ul li{
         list-style: none;
@@ -285,16 +316,43 @@ ul li a:hover{
     .icon{
         /* width: 250px; */
         height: 75px;
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        border: 1px solid #fff;
         /* margin: auto; */
     }
     
     .logo{
-        color: #ff7200;
-        font-size: 35px;
-        font-family: arial;
-        padding-left: 20px;
-        float: left;
-        padding-top: 10px;
+        display: none;
+    }
+    #hamburger-menu {
+        width: 50px;
+        height: 50px;
+        display: block;
+        border: none;
+        padding: 0px;
+        margin: 20px;
+        background: linear-gradient(
+          to bottom, 
+          #fff, #fff 20%, 
+          #ff7200 20%, #ff7200 40%, 
+          #fff 40%, #fff 60%, 
+          #ff7200 60%, #ff7200 80%, 
+          #fff 80%, #fff 100%
+        );
+    }
+    
+    #hamburger-menu #sidebar-menu {
+        visibilty: hidden;
+        position: fixed;
+        top: 0;
+        left: -250px;
+        width: 200px;
+        height: 100%;
+        background-color: #3D0E61;
+        padding: 0px 10px;
+        box-sizing: border-box;
     }
 }
 
@@ -322,7 +380,7 @@ ul li a:hover{
         background-image: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),  url(image/image.jpeg);
         background-position: center;
         background-size: cover;
-        height: 150vh;
+        height: 200vh;
         overflow: hidden;
     }
     .content{
@@ -332,7 +390,7 @@ ul li a:hover{
         color: #fff;
         /* position: relative; */
     }
-    .form{
+    /* .form{
         width: 250px;
         height: 380px;
         background: linear-gradient(to top, rgba(0,0,0,0.8)50%, rgba(0,0,0,0.8)50%);
@@ -342,9 +400,9 @@ ul li a:hover{
         border-radius: 10px;
         padding: 25px;
         margin-top: 500px;
-    }
+    } */
     ul{
-        display: flex;
+        display: none;
         float: left;
         justify-content: center;
         align-items: center;
